wp-content/themes/david-hide-blog/sass/components/_search.scss
.search {
  background-color: $color-dark-grey;
  max-height: 0;
  opacity: 0;

  &--active {
    display: block;
    opacity: 1;
  }

  &__input {
    background-color: $color-white;
    border: none;
    font-family: inherit;
    font-size: inherit;
    margin: 1rem 0;
    padding: 1rem;
    width: 100%;
  }

  &__results {
    min-height: 15rem;
    position: absolute;
    width: 100%;
    z-index: 99;
  }

  &__item {
    background-color: $color-white;
    border-bottom: 1px solid $color-light-grey;
    border-left: 1px solid $color-light-grey;
    border-right: 1px solid $color-light-grey;
    list-style: none;
    padding: 1rem;
  }

  &__link {
    color: $color-primary;
    text-decoration: none;
    font-weight: 600;

    &:visited {
      color: darken($color-primary, 25%);
    }
  }

  &__category {
    color: $color-light-grey;
    float: right;
    font-weight: 300;
    text-transform: uppercase;
  }
}

